add: query test cases in jest and swagger
