# backend/routes/candidatesRoutes.js
@@ -10,8 +10,9 @@ router.get("/:id", CandidatesController.getCandidateById);
 
 router.get("/election/:election_type", CandidatesController.getCandidateNameByElectionType);
 router.get("/count/byCandidate/byElection", CandidatesController.getCandidatesCountByElectionType);
-router.get("/parliament/aged", CandidatesController.getCandidatesAgedForParliament)
-router.get('/count/byCandidate', CandidatesController.getCountByCandidate);
 router.get('/parliament/count/byCandidate', CandidatesController.getCountByCandidateForParliament);
+router.get('/count/byCandidate', CandidatesController.getCountByCandidate);
+router.get("/parliament/agedCandidates", CandidatesController.getCandidatesAgedForParliament)
+
 
 module.exports = router; 
